fixes overflow issue on mobile

--- a/apps/getbde/src/app/app.component.scss
+++ b/apps/getbde/src/app/app.component.scss
@@ -5,10 +5,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 6rem;
   box-sizing: border-box;
+  overflow: auto;
 
   img {
     max-width: 100%;
+  }
+
+  h1,
+  h2 {
+    margin: 0;
+  }
+
+  @media (min-width: 600px) {
+    padding-bottom: 6rem;
   }
 }
